fix avatar to be centered on small screens

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -150,6 +150,7 @@
 
   .inline {
     display: block;
+    text-align: center;
   }
 
   .inline img {
